# MULTI-AI

./: .gitignore  README.md  package.json  pyproject.toml  setup.py
.github/workflows/: release.yml
.idx/: dev.nix
Multi-AI/: README.md  pubspec.yaml  pyproject.toml  requirements.txt
Multi-AI/Multi_AI.egg-info/: PKG-INFO  SOURCES.txt
Multi-AI/lib/: main.dart
Multi-AI/multi_ai/: __init__.c  __init__.py  __init__.pyx  hardware.c  hardware.pyx  server.c  server.pyx
Multi-AI/multi_ai/models/: GPTOSSS20b.c  GPTOSSS20b.pyx  TensorFlow.c  TensorFlow.py  __init__.c  __init__.py  __init__.pyx  deepseek_r1_distill_1_5b.c  deepseek_r1_distill_1_5b.pyx  deepseek_r1_distill_1_5b_on_device.c  deepseek_r1_distill_1_5b_on_device.pyx  deepseek_v3_2_speciale_7b.c  deepseek_v3_2_speciale_7b.py  falcon2_11b.c  falcon2_11b.pyx  falcon2_11b_on_device.c  falcon2_11b_on_device.pyx  falcon3.c  falcon3.pyx  falcon3_on_device.c  falcon3_on_device.pyx  falcon_180b.py  falcon_40b.c  falcon_40b.py  falcon_40b.pyx  falcon_7b.c  falcon_7b.py  falcon_7b.pyx  falcon_7b_on_device.c  falcon_7b_on_device.pyx  falcon_h1.c  falcon_h1.py  falcon_h1.pyx  falcon_h1_on_device.c  falcon_h1_on_device.pyx  falcon_mamba_7b.c  falcon_mamba_7b.pyx  falcon_mamba_7b_on_device.c  falcon_mamba_7b_on_device.pyx  gemma1.c  (+103 more)
Multi-AI/src/multi_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Multi-AI/tests/: conftest.py  test_generation_pipeline.pyx  test_hardware_fit.pyx  test_imports.c  test_imports.pyx  test_model_downloads.pyx  test_model_roster.pyx
app/: README.md  pubspec.yaml
app/lib/: api_client.dart  api_tester.dart  attachment_input.dart  backend_process.dart  bubble_text.dart  chat_screen.dart  chat_store.dart  chat_types.dart  main.dart  markdown_settings.dart  markdown_text.dart  model_detail_screen.dart  model_fit_badge.dart  on_device_engine.dart  startup_gate.dart  storage_settings_dialog.dart  theme.dart  thinking_indicator.dart  thinking_settings.dart  thinking_settings_dialog.dart  thinking_words.dart  update_service.dart
app/linux/: CMakeLists.txt
installer/: multi-ai.iss
my-python-app/: .env.sample  package.json  platformatic.json
scripts/: restart-backend.ps1  run-app.ps1  run-windows.ps1
src/: APITester.tsx  App.tsx
(+21 files in other folders)
