[project]
name = "multi-ai"
version = "0.1.0"
description = "A small collection of AI model stubs for development"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "transformers",
    "accelerate",
    "bitsandbytes",
    "kernels>=0.12.0,<0.13",
    "triton-windows; sys_platform == 'win32'",
    "pip-system-certs",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
