[project]
name = "multi-ai"
version = "0.1.0"
description = "A small collection of AI model stubs for development"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "transformers",
    "accelerate",
    "bitsandbytes",
    "kernels>=0.12.0,<0.13",
    "triton-windows; sys_platform == 'win32'",
    "pip-system-certs",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
# Model files and their tests are plain-Python `.pyx` sources (see
# tests/test_imports.pyx) — pytest's default `test_*.py` glob would silently
# collect zero tests otherwise.
python_files = ["test_*.py", "test_*.pyx"]
testpaths = ["tests"]
